--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -36,6 +36,10 @@
     
 <link rel="stylesheet" href="/css/toc.css">
 
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/@fancyapps/ui@4.0/dist/fancybox.css"
+    />
 
 
     <!-- 引用iconfont Symbol -->
@@ -433,6 +437,24 @@
 
     </ul>
 </div>
+
+<!-- 获取当前页面URL到localstorage -->
+<script>
+    let showUI = document.getElementsByClassName('ui-design');
+    let caseList = document.getElementsByClassName('ui-design')[0].children;
+
+    //把当前页面的URL存放到localstorage
+    function getlastURL() {
+        let lastURL = window.location.href;
+        localStorage.setItem ('trkey', lastURL);
+        console.log (lastURL)
+    }
+
+    // 展示列表可交互元素绑定点击元素，并执行函数
+    for( i= 0; i < caseList.length; i++ ) {
+        caseList[i].onclick = getlastURL;
+    }
+</script>
             </div>
         </div>
     </body>
@@ -452,4 +474,18 @@
     hljs.initLineNumbersOnLoad();
 </script>
 
+<script>
+    function setImgAtt() {
+    let allIMG = document.getElementsByTagName('img');
+    for (let i = 0; i < allIMG.length; i++) {
+            allIMG[i].setAttribute('draggable', 'false');
+        }
+    }   
+    document.addEventListener('DOMContentLoaded', setImgAtt, false)
+
+    document.oncontextmenu = function (e) {
+        return false
+    }
+
+</script>
 </html>
